"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-04-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-24:
	  guile/chpsim-wrap.cc: Finished implementing state-change-stream 
		interface to chpsim trace files.
		Now should perm. the use of SCM_USE_SYMBOLIC_TYPE_TAGS.
	  sim/chpsim/Trace.cc: fixed state_change_streamer::advance()
	  Added test cases for state-change-stream features.


2007-04-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-23:
	  Added guile/devel_switches.h for switches:
		using flag SCM_USE_SYMBOLIC_TYPE_TAGS to replace
		scm-constants with quoted symbols, such as 'bool.
	  guile/libhackt-wrap.{h,cc}: added scm_type_symbols array
		of unique-symbols 'bool, 'int, etc...
		which initializes the array (and reverse-map) at 
		procedure-load time.  
	  Test cases updated accordingly.


2007-04-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-22:
	  Added sim/chpsim/TraceIterators.h for handy state-change
		trace iterator classes (defined as nested).  
	  Implemented most of state-change trace stream interface.
	  Next: consider replacing hac:bool-tag constants with
		SCM symbols like 'hac:bool-tag.  
	  TODO: finish state-change to SCM constructor.
		utility scm functions to operate on state-change stream.


2007-03-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-21:
	  Implemented trace-file random-access interface, indexed by
		event entry number.  Added to file 
		"guile/scm_chpsim_trace_stream.{h,cc}" though is not stream.
		new primitives: hac:lookup-trace-entry, 
			hac:chpsim-trace-num-entries, 
			hac:open-chpsim-trace-accessor
	  Added added new test cases to go along with.
	  sim/chpsim/Trace.cc: entry_reverse_streamer now caches the