@@ -2,7 +2,7 @@
 	\file "guile/devel_switches.h"
 	Use of this file (ideally) should be confined to the guile directory.  
 
-	$Id: devel_switches.h,v 1.1.2.1 2007/04/05 01:04:50 fang Exp $
+	$Id: devel_switches.h,v 1.1.2.2 2007/04/06 03:52:35 fang Exp $
  */
 
 #ifndef	__HAC_GUILE_DEVEL_SWITCHES_H__
@@ -19,14 +19,6 @@
 	However, if you are developing, use this file as you see fit.  
 #endif
 //=============================================================================
-/**
-	Define to 1 to use symbols instead of constant variables:
-	replace (define bool-tag 13) with 'bool-tag instead.
-	Rationale: symbols are uniquely allocated objects, ints are replicated.
-	Goal: 1
-	Status: done, tested, ready to perm.
- */
-#define	SCM_USE_SYMBOLIC_TYPE_TAGS				1
 
 //=============================================================================
 
