@@ -1,6 +1,6 @@
 /**
 	\file "main/libhackt-wrap.h"
-	$Id: libhackt-wrap.h,v 1.1.2.2 2007/04/05 01:04:50 fang Exp $
+	$Id: libhackt-wrap.h,v 1.1.2.3 2007/04/06 03:52:36 fang Exp $
 	Earliest history, file was "main/libhackt-wrap.h"
  */
 
@@ -10,11 +10,9 @@
 #include "util/c_decl.h"
 #include "util/memory/count_ptr.h"
 #include "guile/devel_switches.h"
-#if SCM_USE_SYMBOLIC_TYPE_TAGS
 #include "util/libguile.h"
-#include <map>
+#include <map>		// really only need forward declaration...
 #include <string>
-#endif
 
 //=============================================================================
 // global data to be made accessible to guile interpreter
@@ -37,7 +35,6 @@ using entity::module;
  */
 extern	count_ptr<module>	obj_module;
 
-#if SCM_USE_SYMBOLIC_TYPE_TAGS
 /**
 	Unique SCM symbols 'bool, 'int...
 	To be initialized...
@@ -55,7 +52,7 @@ typedef	std::map<std::string, size_t>	scm_symbol_to_enum_map_type;
  */
 extern
 scm_symbol_to_enum_map_type		scm_symbol_to_enum_map;
-#endif
+
 }	// end namespace guile
 }	// end namespace HAC
 
