@@ -1,15 +1,9 @@
 "scm/TODO"
-	$Id: TODO,v 1.1.2.8 2007/04/04 04:31:29 fang Exp $
+	$Id: TODO,v 1.1.2.9 2007/04/06 03:52:37 fang Exp $
 
 Populate this directory with Scheme modules for working with HACKT.
 
 Top priority: hackt's chpsim trace interface for analysis (under way)
-
-global-reference pairs: replace first element (type enum) with some
-	quoted tag, like 'bool, etc... use scm_symbol() to quote?
-	rationale: for comprehensibility, currently using define'd constants
-	Also: symbols are globally unique, and not duplicated in
-		distinct constructions! whereas integers are allocated.
 
 accessor functions to event-node-ptr SMOB
 	type info [partially done, in the form of predicates, can be refined]
@@ -17,10 +11,7 @@ accessor functions to event-node-ptr SMOB
 	may-read/write dependencies
 
 other stream interfaces:
-	stream of modified state (by event-index) per type of variable, 
-		which can then be unified
 	stream of read (accessed) state/variables? may be difficult
-
 
 slack-time annotation?
 	requires reconstructing precise causality graph of all events?
@@ -35,7 +26,7 @@ trees and sets in scheme library? (associative structures)
 	They better have red-black-trees or AVL trees somewhere...
 
 stream merge algorithms (like set_intersection, set_union, set_difference)
-	prerequisite: streams already sorted
+	precondition: streams already sorted/ordered
 
 histogram of event frequency, by counting immediate successors of selections
 	use either a vector or sparse representation
