@@ -1,6 +1,6 @@
 /**
 	\file "sim/chpsim/TraceIterators.h"
-	$Id: TraceIterators.h,v 1.1.2.2 2007/04/06 03:26:50 fang Exp $
+	$Id: TraceIterators.h,v 1.1.2.3 2007/04/06 03:52:40 fang Exp $
 	Nested iterator class definitions
  */
 
@@ -37,37 +37,6 @@ public:
 	explicit
 	__pseudo_const_iterator(const state_trace_window_base& a) :
 		__iter(a.data_array.begin()) { }
-
-#if 0
-	bool
-	operator == (const iter_type i) const {
-		return this->__iter == i;
-	}
-
-	bool
-	operator != (const iter_type i) const {
-		return this->__iter != i;
-	}
-#endif
-
-#if 0
-	void
-	advance_if_event_eq(const trace_index_type ei, 
-			const state_trace_window_base& w) {
-		if (this->__iter != w.data_array.end() &&
-			this->__iter->event_index == ei) {
-			++this->__iter;
-		}
-	}
-#endif
-
-#if 0
-	/// \pre __iter is NOT already at end()
-	bool
-	at(const trace_index_type ei) const {
-		return this->__iter->event_index == ei;
-	}
-#endif
 
 };	// end struct __pseudo_const_iterator
 
@@ -129,26 +98,6 @@ struct state_trace_time_window::pseudo_const_iterator :
 		enum_pseudo_const_iterator(e), 
 		channel_pseudo_const_iterator(c) { }
 
-#if 0
-	void
-	begin(const state_trace_time_window& w) {
-		bool_pseudo_const_iterator::begin(w);
-		int_pseudo_const_iterator::begin(w);
-		enum_pseudo_const_iterator::begin(w);
-		channel_pseudo_const_iterator::begin(w);
-	}
-#endif
-
-#if 0
-	void
-	advance(const trace_index_type ti, 
-		const state_trace_time_window& w) {
-		bool_pseudo_const_iterator::advance_if_event_eq(ti, w);
-		int_pseudo_const_iterator::advance_if_event_eq(ti, w);
-		enum_pseudo_const_iterator::advance_if_event_eq(ti, w);
-		channel_pseudo_const_iterator::advance_if_event_eq(ti, w);
-	}
-#endif
 };	// end class pseudo_const_iterator
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -175,28 +124,6 @@ struct state_trace_time_window::pseudo_const_iterator_range :
 	get(void) const {
 		return state_trace_window_base<Tag>::__pseudo_const_iterator_range::p;
 	}
-
-#if 0
-	pseudo_const_iterator
-	lower(void) const {
-		return pseudo_const_iterator(
-			bool_pseudo_const_iterator_range::p.first,
-			int_pseudo_const_iterator_range::p.first,
-			enum_pseudo_const_iterator_range::p.first,
-			channel_pseudo_const_iterator_range::p.first
-		);
-	}
-
-	pseudo_const_iterator
-	upper(void) const {
-		return pseudo_const_iterator(
-			bool_pseudo_const_iterator_range::p.second,
-			int_pseudo_const_iterator_range::p.second,
-			enum_pseudo_const_iterator_range::p.second,
-			channel_pseudo_const_iterator_range::p.second
-		);
-	}
-#endif
 
 };	// end class pseudo_const_iterator_range
 
